列表样式修改
修改为横向滚动, 点击区域稍微缩小一点, 文案超长显示为...

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -50,7 +50,7 @@
         <!-- <text>收起</text> -->
       </view>
       <view class="office-list-wrap">
-        <scroll-view scroll-y="true" class='office-list'>
+        <scroll-view scroll-x="true" class='office-list'>
           <view class='office-list-scroll-view'>
           
           <block wx:for="{{officeList}}">
@@ -75,7 +75,7 @@
         <!-- <text>收起</text> -->
       </view>
       <view class="office-list-wrap">
-        <scroll-view scroll-y="true" class='office-list'>
+        <scroll-view scroll-x="true" class='office-list'>
           <view class='office-list-scroll-view'>
           
           <block wx:for="{{freeFlowArea}}">
@@ -100,7 +100,7 @@
         <!-- <text>收起</text> -->
       </view>
       <view class="office-list-wrap">
-        <scroll-view scroll-y="true" class='office-list'>
+        <scroll-view scroll-x="true" class='office-list'>
           <view class='office-list-scroll-view'>
           
           <block wx:for="{{popularApp}}">
