--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -41,6 +41,16 @@
 .profile-name {
   color: #333333;
   margin-left: 30rpx;
+  max-width: 200rpx;
+}
+
+.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  /* display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical; */
 }
 
 .profile-intro {
